# artana-kernel

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  agent.db-shm  agent.db-wal  agent_feature.md  best_practices.md  chapter2_step2.db  chapter3_step1.db  chapter3_step3.db  chapter3_step4.db  chapter4_step1.db  chapter4_step2.db  chapter4_step5.db  extract.py  harness.db  improovements.md  mamory.md  prd.md  prd2.md  pyproject.toml  step1.db  step2.db  tickets.md  workflow.db
.tmp_doc_validation/: ch1_b1.py  ch1_b3.py  ch1_b4.py  chapter1_b5.py  chapter1_b6.py  chapter2_b1.py  chapter3_b1.py  chapter3_block_3.py  chapter4_block_2.py  chapter4_block_4.py  results.json
docs/: Chapter1.md  Chapter2.md  Chapter3.md  Chapter4.md  Chapter5.md  Chapter6.md  README.md  compatibility_matrix.md  deep_traceability.md  kernel_behavior_index.json  kernel_contracts.md
examples/: 01_durable_chat_replay.py  02_real_litellm_chat.py  03_fact_extraction_triplets.py  04_autonomous_agent_research.py  05_hard_triplets_workflow.py  06_triplets_swarm.py  07_adaptive_agent_learning.py  08_responses_mode.py  09_harness_engineering_dx.py  README.md  _live_example_utils.py  golden_example.py
output/: files_content.md  run_state_benchmark.md
scripts/: benchmark_run_state.py  generate_kernel_behavior_index.py
tests/: test_agent_runtime.py  test_approval_gates_policy.py  test_audit_chain.py  test_autonomous_agent_acceptance.py  test_autonomous_agent_features.py  test_best_practices_contract.py  test_canonicalization.py  test_cli.py  test_context_builder.py  test_kernel.py  (+39 more)
(+178 files in other folders)
